# web_homework14

./: main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/versions/: 0a3d63407780_init.py  1ec5436b3e17_init.py  53115ada6443_init.py  ddc6c2a29f0e_init.py  fc55c43803c1_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_func_routes_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
