[tool.poetry]
name = "web-homework11"
version = "0.1.0"
description = ""
authors = ["PetroChulkov <114095841+PetroChulkov@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_homework11"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sqlalchemy = "^2.0.9"
psycopg2 = "^2.9.6"
alembic = "^1.10.3"
pip = "^23.0.1"
pydantic = {extras = ["email"], version = "^1.10.7"}
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
fastapi-mail = "^1.2.7"
fastapi-limiter = "^0.1.5"
redis = "^4.5.4"
asyncio-redis = "^0.16.0"
cloudinary = "^1.32.0"
pytest = "^7.3.1"
httpx = "^0.24.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
